--- a/index.html
+++ b/index.html
@@ -1,15 +1,42 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Home Health</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <link rel="icon" type="image/jpg" href="LogoAgrinhoSemFundo.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
+    rel="stylesheet">
 </head>
-<p> a migração do campo à cidade em busca de oportunidades é muito importante no campo a mecanização reduz empregos impulsionando a busca por alternativas urbanas Nas cidades os migrantes enfrentam desafios de adaptação e qualificação mas encontram melhores serviços e oportunidades de crescimento sse movimento embora desafiador promove desenvolvimento pessoal e contribui para a diversidade urbana destacando a importância do equilíbrio entre rural e urbano </p>
+
+
+<div class="caixa">
+  <h1> <img class="LogoTopo" id="LogoTopo" src="LogoAgrinhoSemFundo.png"></h1>
+  <nav>
+    <ul>
+      <form>
+        <label class="TextoTopo" for="Procurar">Como você está se sentindo? Pesquise o seu sintoma e discubra plantas e
+          iguarias que podem te ajudar a se sentir melhor.</label><br><br>
+        <input placeholder="Gripe/Tosse/Resfriado..." class="BarraDeProcura" type="search" id="searchbar"
+          name="searchbar" onkeyup="search()"><br>
+        <ul>
+          <label class="fonte" for="Menta">Gripe</label>
+          <li  class="procura"><img src="Menta.png" class="Menta">A menta</li>
+
+
+
+        </ul>
+      </form>
+    </ul>
+  </nav>
+</div>
+</header>
+
 <body>
-  
+
   <script src="script.js"></script>
 </body>
 
