--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <nav>
     <ul>
       <form>
-        <label class="TextoTopo" for="Procurar">Como você está se sentindo? Pesquise o seu sintoma e discubra plantas e
+        <label class="TextoTopo" for="Procurar">Como você está se sentindo? Pesquise o seu sintoma e descubra plantas e
           iguarias que podem te ajudar a se sentir melhor.</label><br><br>
         <input placeholder="Gripe/Tosse/Resfriado..." class="BarraDeProcura" type="search" id="searchbar"
           name="searchbar" onkeyup="search()"><br>
