--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           name="searchbar" onkeyup="search()">
         <ul>
           <li>
-            <p class="procura">Gripe</p>
+            <p class="procura">Bom para a gripe e resfriado, A menta possui propriedades descongestionantes, que podem aliviar o nariz entupido e proporcionar sensação de alívio respiratório.<br><img src="Menta.png"><br>A menta é uma planta pequena e facil de cuidar e um ótimo remedio natural para combater alivirar os sintomas da gripe.<br><a href="https://www.plantei.com.br/sementes-de-hortela-menta-topseed-linha-tradicional"><br><br>Sementes de Menta/Hortelã $3,86</a><br><br>Para o cultivo da menta permita que cresçam alguns centímetros de comprimento antes do plantio. O vaso ideal para a hortelã/menta deve apresentar cerca de 30 a 40 cm de diâmetro, para que suas raízes se desenvolvam bem e a planta cresça forte e viçosa. Embora a hortelã e a menta exija bastante água, o solo deve estar sempre bem drenado.</p>
             <p class="procura">Tosse</p>
             <p class="procura">Resfriado</p>
             <p class="procura">Dor de garganta</p>
