--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
     rel="stylesheet">
 </head>
-
-
+<img src="">
 <div class="caixa">
   <h1> <img class="LogoTopo" id="LogoTopo" src="LogoAgrinhoSemFundo.png"></h1>
   <nav>
@@ -22,10 +21,10 @@
         <label class="TextoTopo" for="Procurar">Como você está se sentindo? Pesquise o seu sintoma e descubra plantas e
           iguarias que podem te ajudar a se sentir melhor.</label><br><br>
         <input  placeholder="Gripe/Tosse/Resfriado..." class="BarraDeProcura" autocomplete="off" type="search" id="searchbar"
-          name="searchbar" onkeyup="search()">
+          name="searchbar" onkeyup="search()"><br><br>
         <ul>
           <li>
-            <p class="procura">Bom para a gripe e resfriado, A menta possui propriedades descongestionantes, que podem aliviar o nariz entupido e proporcionar sensação de alívio respiratório.<br><img width="450" class="Menta" src="Menta.jpeg"><br>A menta é uma planta pequena e facil de cuidar e um ótimo remedio natural para combater alivirar os sintomas da gripe.<br><a href="https://www.plantei.com.br/sementes-de-hortela-menta-topseed-linha-tradicional"><br><br>Sementes de Menta/Hortelã $3,86</a><br><br>Para o cultivo da menta permita que cresçam alguns centímetros de comprimento antes do plantio. O vaso ideal para a hortelã/menta deve apresentar cerca de 30 a 40 cm de diâmetro, para que suas raízes se desenvolvam bem e a planta cresça forte e viçosa. Embora a hortelã e a menta exija bastante água, o solo deve estar sempre bem drenado.</p>
+            <p class="procura">Bom para a gripe,resfriado e dor no corpo. A menta possui propriedades descongestionantes, que podem aliviar o nariz entupido e proporcionar sensação de alívio respiratório.<br><img width="450" class="Menta" src="Menta.jpeg"><br>A menta é uma planta pequena e facil de cuidar e um ótimo remedio natural para combater alivirar os sintomas da gripe.<br><a href="https://www.plantei.com.br/sementes-de-hortela-menta-topseed-linha-tradicional"><br><br>Sementes de Menta/Hortelã $3,86</a><br><a href="menta.html">Clique para mais informações.</a><br><br>Para o cultivo da menta permita que cresçam alguns centímetros de comprimento antes do plantio. O vaso ideal para a hortelã/menta deve apresentar cerca de 30 a 40 cm de diâmetro, para que suas raízes se desenvolvam bem e a planta cresça forte e viçosa. Embora a hortelã e a menta exija bastante água, o solo deve estar sempre bem drenado.</p>
             
             <p class="procura">Tosse</p>
             <p class="procura">Resfriado</p>
