--- a/index.html
+++ b/index.html
@@ -24,14 +24,16 @@
           name="searchbar" onkeyup="search()"><br><br>
         <ul>
           <li>
-            <p class="procura">Bom para a gripe,resfriado e dor no corpo. A menta possui propriedades descongestionantes, que podem aliviar o nariz entupido e proporcionar sensação de alívio respiratório.<br><img width="450" class="Menta" src="Menta.jpeg"><br>A menta é uma planta pequena e facil de cuidar e um ótimo remedio natural para combater alivirar os sintomas da gripe.<br><a href="https://www.plantei.com.br/sementes-de-hortela-menta-topseed-linha-tradicional"><br><br>Sementes de Menta/Hortelã $3,86</a><br><a href="menta.html">Clique para mais informações.</a><br><br>Para o cultivo da menta permita que cresçam alguns centímetros de comprimento antes do plantio. O vaso ideal para a hortelã/menta deve apresentar cerca de 30 a 40 cm de diâmetro, para que suas raízes se desenvolvam bem e a planta cresça forte e viçosa. Embora a hortelã e a menta exija bastante água, o solo deve estar sempre bem drenado.</p>
+            <p class="procura">Bom para a gripe,resfriado e dor no corpo. A menta possui propriedades descongestionantes, que podem aliviar o nariz entupido e proporcionar sensação de alívio respiratório.<br><img width="450" class="Menta" src="Menta.jpeg"><br>A menta é uma planta pequena e facil de cuidar e um ótimo remedio natural para combater alivirar os sintomas da gripe.<br><a href="https://www.plantei.com.br/sementes-de-hortela-menta-topseed-linha-tradicional"><br><br>Sementes de Menta/Hortelã R$3,86</a><br><a href="menta.html">Clique para mais informações.</a><br><br>Para o cultivo da menta permita que cresçam alguns centímetros de comprimento antes do plantio. O vaso ideal para a hortelã/menta deve apresentar cerca de 30 a 40 cm de diâmetro, para que suas raízes se desenvolvam bem e a planta cresça forte e viçosa. Embora a hortelã e a menta exija bastante água, o solo deve estar sempre bem drenado.</p>
+
+            <p class="procura">Os chás de Hortelã-Pimenta ajudam a aliviar a 
+ alergia e a coceira além de ter propriedades antibacterianas anti-inflamatórias, antissépticas e efeitos calmantes para ajudar em qualquer tipo de irritação.<br><img width="450" class="hortelaP" src="Hortelã-Pimenta.jpg"><br>A Hortelã-Pimenta é uma planta fácil de cultivar e que não requer tantos cuidados.<br><a href="https://www.agromania.com.br/semente-de-hortela-menta-piperita-feltrin-50-mg?utm_source=google&utm_medium=Shopping&utm_campaign=semente-de-hortela-menta-piperita-feltrin-50-mg&inStock&gad_source=1&gclid=Cj0KCQjwvb-zBhCmARIsAAfUI2tdIgUPYYYjWv_YJWfE1VrfislI1-5iWP94c-d158XHY-bPO-Kv2jYaAk2cEALw_wcB"><br><br>Sementes de Menta/Hortelã Piperita R$1,99(PIX) no cartão em até 1x de R$ 2,12 sem juros</a><br><a href="">Clique para mais informações.</a><br><br>A Hortelã-Pimenta é uma das plantas que so podem ser cultivadas através de caules,estacas, mudas ou estolhos saudaveis onde ela podera se ploriferar, Regue a planta regularmente e deixe-a e um lugar iluminado mas sem ser luz direta depois que ela ficar maior retire o pé de Hortelã-Pimena para um lugar definitivo onde ela ficara.</p>
             
             <p class="procura">Tosse</p>
-            <p class="procura">Resfriado</p>
             <p class="procura">Dor de garganta</p>
             <p class="procura">Fraqueza</p>
             <p class="procura">Dor no corpo</p>
-            <p class="procura">Alergia</p>
+            
           </li>
         </ul>
       </form>
